# traffic_sim

./: Cargo.toml  index.html  package-lock.json  package.json  run.ps1  sim_config.toml
.cargo/: config.toml
src/: main.js  main.rs
src-tauri/: Cargo.toml  sim_config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
