[package]
name = "traffic-sim-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = { version = "0.29", features = ["serde"] }
rand = "0.8"
toml = "0.8"

[profile.dev]
incremental = true
opt-level = 0
debug = 1
codegen-units = 16
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
